# GM-NTG-GUI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Release - 快捷方式.lnk
src/: analysis_widget.cpp  analysis_widget.h  generator_widget.cpp  generator_widget.h  log_widget.cpp  log_widget.h  main.cpp  main_window.cpp  main_window.h  parameter_widget.cpp  parameter_widget.h  results_widget.cpp  results_widget.h  solver_worker.cpp  solver_worker.h
src/panels/: coalition_panel.cpp  coalition_panel.h  iteration_panel.cpp  iteration_panel.h  overview_panel.cpp  overview_panel.h  plant_panel.cpp  plant_panel.h
